--- a/styles.css
+++ b/styles.css
@@ -1,126 +1,169 @@
 body{
-    font-family: Verdana, Arial, Geneva;
-    background-color: rgb(249, 252, 255);
-  }
-  img {
-    width: 470px;
-    height: 440px;
-    object-fit: cover;
-    border-radius: 8px;
-    padding: 18px;
-    cursor: pointer;
-  }
-  h1 {
-    font-size: 2.5em;
-    color:#333;
-    text-align: center;
-    margin-bottom: auto;
-    line-height: 90px;
-    border-radius: 3px;
-    font-style: oblique;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-  }
-  h2 {
-    font-size: 30px;
-    color:black;
-    text-align: center;
-    line-height: 50px;
-    font-style: oblique;
-  }
-  h2:hover{
+  font-family: Verdana, Arial, Geneva;
+  background-color: rgb(249, 252, 255);
+}
+img {
+  width: 470px;
+  height: 440px;
+  object-fit: cover;
+  border-radius: 30px;
+  padding: 18px;
+  cursor: pointer;
+}
+h1 {
+  font-size: 2em;
+  color:#333;
+  text-align: center;
+  margin-bottom: auto;
+  line-height: 70px;
+  border-radius: 4px;
+  font-style: oblique;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  padding-top: 5px;
+}
+h2 {
+  font-size: 30px;
+  color:black;
+  text-align: center;
+  line-height: 50px;
+  font-style: oblique;
+}
+h2:hover{
+color: #ffcc00;
+}
+header{
+  background-color: #333;
+  color: #fff;
+  position: sticky;
+  top: 0;
+  padding: 0.5em;
+}
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-style: oblique;
+}
+
+.logo a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.3em;
+  font-weight: bold;
+}
+
+.nav2 {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 10px;
+}
+
+.nav2 li {
+  margin: 0 15px;
+}
+
+.nav2 a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+.nav2 a:hover {
   color: #ffcc00;
+}
+.par{
+  font-size: 22px;
+  max-width: 1020px;
+  margin: 20px auto;
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  font-family: Garamond;
+}
+.imm{
+  float: left;
+  margin-right: 15px;
+  width: 500px;
+  height: 500px;
+}
+footer {
+  font-size: medium;
+  line-height: 1px;
+  text-align: center;
+  font-weight: bold;
+  margin: auto;
+}
+form {
+  display:grid;
+  gap: 10px;
+}
+label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 8px;
+}
+input,
+textarea {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    margin-top: 4px;
+    margin-bottom: 15px;
+}
+button {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  cursor:pointer ;
+}
+button:hover {
+  background-color: #555;
+}
+@media only screen and (max-width:600px){
+  .par {
+    width: 80%;
   }
   header{
-    background-color: #333;
-    color: #fff;
-    padding: 1em;
-    border-radius: 10px;
+    padding: 0.5em;
   }
-  .nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-style: oblique;
+  h1{
+    font-size: 24px;
+    line-height: 30px;
+    padding-top: 3px;
   }
-  
+  h2 {
+    font-size: 20px;
+    line-height: 30px;
+  }
   .logo a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.5em;
-    font-weight: bold;
+    font-size: 15px;
   }
-  
-  .nav2 {
-    list-style: none;
-    display: flex;
-    margin: 0;
-    padding: 10px;
-  }
-  
   .nav2 li {
-    margin: 0 15px;
-  }
-  
-  .nav2 a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    transition: color 0.3s ease;
-  }
-  
-  .nav2 a:hover {
-    color: #ffcc00;
-  }
-  .par{
-    font-size: 22px;
-    max-width: 1050px;
-    margin: 20px auto;
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 12px;
-    font-family: Garamond;
+    margin: 0 5px;
   }
   .imm{
-    float: left;
-    margin-right: 15px;
-    border-radius: 320px;
-    width: 500px;
-    height: 500px;
+    height: 100%;
+    width: 100%;
+    border-radius: 22px;
   }
-  footer {
-    font-size: medium;
-    line-height: 1px;
-    text-align: center;
-    font-weight: bold;
-    margin: auto;
-  }
-  form {
-    display:grid;
-    gap: 10px;
-  }
-  label {
-    font-weight: bold;
-    display: block;
-    margin-bottom: 8px;
+  img{
+    height: 100%;
+    width: 100%;
+    padding: 0%;
+    border-radius: 22px;
   }
   input,
-  textarea {
-      width: 100%;
-      padding: 10px;
-      box-sizing: border-box;
-      margin-top: 4px;
-      margin-bottom: 15px;
-  }
-  button {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 15px;
-    border: none;
-    cursor:pointer ;
-  }
-  
-  button:hover {
-    background-color: #555;
-  }
+textarea {
+  margin-top: 2px;
+  margin-bottom: 10px;
+}
+form{
+  padding: 2px;
+  gap: 6px;
+}
+}
